Thu Mar  2 12:27:03 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 16:24:58 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 02:01:53 1995  John Gilmore  (gnu at toad.com)

	* sim_server.c:  Avoid <krb5/...> and <com_err.h> includes.

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Thu Sep 29 22:46:51 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: relink executable when libraries change
